<resources>
    <string name="app_name">Creatures</string>
    <string name="appName">Creatures</string>
    <string name="usernameHint">Enter username</string>
    <string name="passwordHint">Enter password</string>
    <string name="loginButtonText">Login</string>
    <string name="createAccButtonText">Create account</string>
    <string name="databaseElements">This should not be displayed</string>
    <string name="deleteAll">Delete all</string>
    <string name="deleteElement">Delete</string>
    <string name="valueToDelete">Enter username</string>
    <string name="noPlayersMassage">Error there is no players</string>
    <string name="back">Back</string>
    <string name="creature_name_hint">Name</string>
    <string name="creature_hp_hint">HP</string>
    <string name="creature_def_hint">Defence</string>
    <string name="creature_agi_hint">Agility</string>
    <string name="choose_attack_type">Choose attack type</string>
    <string name="range">Range</string>
    <string name="melee">Melee</string>
    <string name="heal">Heal</string>
    <string name="create_creature">Create creature</string>
    <string name="creature_creation">Creature creation</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="currUsername">Not logged in</string>
    <string name="creature_atk_hint">Attack</string>
    <string name="no_username">No username</string>
    <string name="no_creatures">No creatures</string>
    <string name="manage_creatures">Manage creatures</string>
    <string name="fight">Fight</string>
    <string name="pet">Pet</string>
    <string name="feed">Feed</string>
    <string name="train">Train</string>
    <string name="reset">Reset CP</string>
    <string name="toHome">To home</string>
    <string name="apply">Apply</string>
    <string name="create_creatures">Create Creatures</string>
    <string name="searchElement">Search</string>
</resources>