<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu"
        android:icon="@drawable/account_icon"
        android:title=""
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/account"
                android:title="@string/account"
                />
            <item android:id="@+id/logout"
                android:title="@string/logout"
                app:showAsAction="ifRoom"/>
            <item android:id="@+id/cancel"
                android:title="@string/cancel"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>

</menu>

    <!--        android:icon="@drawable/account_icon"-->