<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ManageCreaturesActivity"
    >

    <TextView
        android:id="@+id/manageCreatures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_creatures"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        style="@style/spacingVertSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        />

    <TextView
        android:id="@+id/mpDisplay"
        android:textColor="@color/black"
        android:gravity="center"
        style="@style/spacingVertSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <ListView
        android:id="@+id/creaturesList"
        android:layout_width="@dimen/creatureListWidth"
        android:layout_height="@dimen/creatureListHeight"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/spacingVertSmall">
        <Button
            android:id="@+id/buttonPet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet"
            android:onClick="buttonCreatureHandleClick"
            style="@style/spacingHor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.142"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <Button
            android:id="@+id/buttonFeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed"
            android:onClick="buttonCreatureHandleClick"
            style="@style/spacingHor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <Button
            android:id="@+id/buttonTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/train"
            android:onClick="buttonCreatureHandleClick"
            style="@style/spacingHor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.863"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/spacingHor"
            android:text="@string/reset"
            />

        <Button
            android:id="@+id/buttonApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/spacingHor"
            android:text="@string/apply"
            />

        <Button
            android:id="@+id/buttonFight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/spacingHor"
            android:text="@string/fight"
            />
    </LinearLayout>

</LinearLayout>