<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    android:gravity="center">

    <ListView
        android:id="@+id/databaseView"
        android:layout_width="346dp"
        android:layout_height="350dp"
        android:text="@string/databaseElements"
        style="@style/spacingVert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/spacingVert"
        >

        <EditText
            android:id="@+id/valueToSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/valueToDelete"
            style="@style/spacingHor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.159"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.634"
            android:autofillHints="@string/valueToDelete" />

        <Button
            android:id="@+id/searchElement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/loginButtonColor"
            android:text="@string/searchElement"
            style="@style/spacingHor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.897"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.632" />
    </LinearLayout>

    <Button
        android:id="@+id/deleteAll"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:background="@color/createAccButtonColor"
        android:text="@string/deleteAll"
        style="@style/spacingVert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792" />

    <Button
        android:id="@+id/back"
        android:layout_width="152dp"
        android:layout_height="47dp"
        android:background="@color/createAccButtonColor"
        android:text="@string/back"
        style="@style/spacingVert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />
</LinearLayout>