<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">

    <TextView
        android:id="@+id/username"
        android:layout_width="235dp"
        android:layout_height="37dp"
        android:text="@string/no_username"
        android:textColor="@color/black"
        android:textSize="16sp"
        style="@style/spacingVert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/cpDisplay"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <ListView
        android:id="@+id/creaturesList"
        android:layout_width="@dimen/creatureListWidth"
        android:layout_height="@dimen/creatureListHeight"
        style="@style/spacingVertSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.095" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/spacingVertSmall"
        >

        <Button
            android:id="@+id/buttonCreateCreature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_creatures"
            style="@style/spacingHor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creaturesList"
            app:layout_constraintVertical_bias="0.22" />

        <Button
            android:id="@+id/buttonManage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_creatures"
            style="@style/spacingHor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creaturesList"
            app:layout_constraintVertical_bias="0.22" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonFight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonManage"
        app:layout_constraintVertical_bias="0.356" />

</LinearLayout>